--- a/src/sass/_spinner.scss
+++ b/src/sass/_spinner.scss
@@ -11,7 +11,7 @@
     bottom: 0;
     left: 0;
     background: rgba(250,250,250,0.9);
-    z-index: 9999;
+    z-index: 3;
     &.trans {
         transition: all ease-in 1s;
     }
